--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,14 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.22.0-GA</version>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy-agent</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.8.0</version>
 		</dependency>
 
 		<dependency>
@@ -66,7 +71,7 @@
 					<shadedClassifierName>agent</shadedClassifierName>
 					<artifactSet>
 						<includes>
-							<include>org.javassist:javassist</include>
+							<include>net.bytebuddy:*</include>
 						</includes>
 					</artifactSet>
 				</configuration>
