--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
+	<groupId>org.springframework.boot.experimental</groupId>
 	<artifactId>spring-boot-legacy-agent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -56,8 +56,8 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Agent-Class>com.example.Agent</Agent-Class>
-							<Premain-Class>com.example.Agent</Premain-Class>
+							<Agent-Class>org.springframework.boot.legacy.Agent</Agent-Class>
+							<Premain-Class>org.springframework.boot.legacy.Agent</Premain-Class>
 						</manifestEntries>
 					</archive>
 				</configuration>
