--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-/target/
+target/
 !.mvn/wrapper/maven-wrapper.jar
+\#*
+.#*
 
 ### STS ###
 .apt_generated
@@ -8,7 +10,8 @@
 .project
 .settings
 .springBeans
-.sts4-cache
+.sts4-cache/
+.attach_pid*
 
 ### IntelliJ IDEA ###
 .idea
@@ -17,9 +20,9 @@
 *.ipr
 
 ### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
