--- a/app/src/main/resources/META-INF/thin.properties
+++ b/app/src/main/resources/META-INF/thin.properties
@@ -1,2 +1,1 @@
-exclusions.byte-buddy-agent=net.bytebuddy\:byte-buddy-agent
-exclusions.byte-buddy=net.bytebuddy\:byte-buddy
+exclusions.agent=org.springframework.boot.experimental\:spring-boot-custom-agent
