Switch to SpringApplication interceptor

--- a/app/src/main/resources/META-INF/thin.properties
+++ b/app/src/main/resources/META-INF/thin.properties
@@ -1,1 +1,1 @@
-exclusions.agent=org.springframework.boot.experimental\:spring-boot-custom-agent
+#exclusions.agent=org.springframework.boot.experimental\:spring-boot-custom-agent
