--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -28,18 +29,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy-agent</artifactId>
 			<version>1.9.9</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy</artifactId>
 			<version>1.9.9</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.sun</groupId>
@@ -64,8 +64,10 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Agent-Class>org.springframework.boot.legacy.Agent</Agent-Class>
-							<Premain-Class>org.springframework.boot.legacy.Agent</Premain-Class>
+							<Agent-Class>org.springframework.boot.agent.SpringApplicationAgent</Agent-Class>
+							<Premain-Class>org.springframework.boot.agent.SpringApplicationAgent</Premain-Class>
+							<Can-Redefine-Classes>true</Can-Redefine-Classes>
+							<Can-Retransform-Classes>true</Can-Retransform-Classes>
 						</manifestEntries>
 					</archive>
 				</configuration>
